data/all_generated_tests/raw_wast_tests/br_TypeMismatchinControlFlowInstructions_1107.wast
;; 8. **Test for Loop with Missing Operand**: Define a `loop` that expects an `i64` operand at the beginning. Use a `br` to jump into this loop without the required operand on the stack, testing if the engine detects and correctly reports the missing operand.

(assert_invalid
  (module
    (func
      (block
        (loop $L (result i64)
          (br $L)
        )
      )
    )
  )
  "type mismatch"
)